# crm_deploy

./: .gitignore  .gitmodules  README.md  docker-compose.yml
crm-expertiz/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
crm-expertiz/alembic/: env.py
crm-expertiz/alembic/versions/: ab3b4e98c553_add_index_user_and_client.py  f6fb6fd94090_add_index.py
crm-expertiz/src/: main.py
crm-expertiz/src/app/core/auth/: deps.py  rbac.py  security.py  session.py
crm-expertiz/src/app/core/config/: settings.py
crm-expertiz/src/app/core/database/: __init__.py  all_models.py  session.py
crm-expertiz/src/app/core/redis/: __init__.py  redis.py
crm-expertiz/src/app/core/storage/: s3.py
crm-expertiz/src/app/services/calendar/: __init__.py  endpoints.py  models.py  schemas.py  service.py
crm-expertiz/src/app/services/case/: __init__.py  endpoints.py  models.py  schemas.py  service.py
crm-expertiz/src/app/services/client/: __init__.py  endpoints.py  models.py  schemas.py  service.py
crm-expertiz/src/app/services/company/: __init__.py  endpoints.py  models.py  schemas.py  service.py
crm-expertiz/src/app/services/document/: __init__.py  endpoints.py  models.py  schemas.py  service.py
crm-expertiz/src/app/services/mail/: __init__.py  models.py
crm-expertiz/src/app/services/user/: __init__.py  endpoints.py  models.py  schemas.py  service.py  setup.py
crm-expertiz/tests/: conftest.py
crm-expertiz/tests/services/client/: test_endpoints.py
crm-frontend/: .dockerignore  Dockerfile  README.md  (+4 more)
(+83 files in other folders)
