[project]
name = "crm-expertiz"
version = "0.1.0"
description = "CRM система с использованием FastAPI и строгой типизации"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.9.0",
    "sqlalchemy>=2.0.45",
    "psycopg2>=2.9.11",
    "alembic>=1.18.1",
    "python-dotenv>=1.2.1",
    "pydantic-settings>=2.12.0",
    "asyncpg>=0.31.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "boto3>=1.42.30",
    "aiobotocore>=3.1.1",
    "python-multipart>=0.0.22",
    "redis[hiredis]>=7.1.0",
    "bcrypt>=5.0.0",
    "pre-commit>=4.5.1",
    "aiosmtplib>=5.0.0",
    "aioimaplib>=2.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.14.13"
]

[tool.uv]
managed = true
package = false

[tool.ruff]
line-length = 146
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ANN", "UP", "N"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"**/env.py" = ["F401"]
"**/all_models.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

mypy_path = "."
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_test_loop_scope = "session"
